--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <!-- Shapes -->
       <a-sphere position="-1 1 0" radius="0.5" color="#EF2D5E"></a-sphere>
       <a-box position="1 0.5 0" depth="1" height="1" width="1" color="#4CC3D9"></a-box>
-      <a-cylinder position="0 0.75 -2" radius="0.3" height="1.5" color="#FFC65D"></a-cylinder>
+      <a-cylinder position="0 0.75 -2" radius="0.3" height="1.5" color="#873654"></a-cylinder>
       <a-text value="Hello VR!" position="0 2 -3" color="#333"></a-text>
       <a-box position="2 0.5 -1" height="1" width="1" scale="2 1 1" src="#crateTexture"></a-box>
 	  <!--
@@ -42,3 +42,4 @@
     </a-scene>
   </body>
 </html>
+
